--- a/src/main/resources/templates/html/furever_sign-up.html
+++ b/src/main/resources/templates/html/furever_sign-up.html
@@ -72,7 +72,7 @@
                     <label for="email">이메일
                       <span
                         class="txt-error email"
-                        style="padding-left: 10px"></span></label>
+                        th:style="'padding-left: 10px'"></span></label>
                     <div class="input-group mb-4">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
@@ -94,7 +94,7 @@
                   <!-- End of Form -->
                   <div class="form-group">
                     <label for="name"
-                      >이름<span class="txt-error name" style="padding-left: 10px"></span
+                      >이름<span class="txt-error name" th:style="'padding-left: 10px'"></span
                     ></label>
                     <div class="input-group mb-4">
                       <div class="input-group-prepend">
@@ -128,7 +128,7 @@
                       <label for="password"
                         >비밀번호<span
                           class="txt-guide password"
-                          style="padding-left: 10px"
+                          th:style="'padding-left: 10px'"
                         ></span
                       ></label>
                       <div class="input-group mb-4">
@@ -154,7 +154,7 @@
                       <label for="password-confirm"
                         >비밀번호 확인<span
                           class="txt-error password-confirm"
-                          style="padding-left: 10px"
+                          th:style="'padding-left: 10px'"
                         ></span
                       ></label>
                       <div class="input-group mb-4">
